syntax = "proto3";
package demo;

message HelloRequest {
  string name = 1;
}
