syntax = "proto3";
package demo;

message HelloResponse {
  string greeting = 1;
}